[package]
name = "object-property"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Static reflection for Rust, inspired by KingsIsle's ObjectProperty"
keywords = ["reflection", "serialization"]
repository = "https://github.com/kronos-project/object-property.git"
license = "ISC"
edition = "2021"

[dependencies]
